--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Scenes/TutorialLevel.TutorialLevel
+GameDefaultMap=/Game/Scenes/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Blueprints/MainGameMode.MainGameMode_C
-EditorStartupMap=/Game/Scenes/TutorialLevel.TutorialLevel
+EditorStartupMap=/Game/Scenes/MainMenu.MainMenu
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
