--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Scenes/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Blueprints/MainGameMode.MainGameMode_C
 EditorStartupMap=/Game/Scenes/MainMenu.MainMenu
+GameInstanceClass=/Game/Blueprints/Widget/GameInstance_Main.GameInstance_Main_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
